objects/CO_Temporary_Limit_Changes__c.object
<CustomObject>
    <description>This object is used to track Temporary Limit changes for Payable ACH &amp; Wire Transmission Products.</description>
    <fields>
        <fullName>CF_ACH_Client_Authorization_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Temporary Limit Changes layout.</description>
        <label>ACH Client Authorization Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Limit_Change__c</fullName>
        <description>Used in Temporary Limit Changes Layout.</description>
        <formula>(CF_Requested_Temporary_Limit__c -   CF_Current_ACH_Limit__c ) / CF_Current_ACH_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Limit Change (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approver 1 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 2 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 3 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 4 Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on Temporary Limit Changes layout.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Temporary_Limit_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Billing_Account_Number__c</fullName>
        <description>Used on Temporary Limit Changes layout.</description>
        <formula>CF_Treasury_Service_Name__r.CF_Billing_Account_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_Wire_Limit__c</fullName>
        <description>Used on Temporary Limit changes layout.</description>
        <formula>CF_Treasury_Service_Name__r.CF_Corporate_Daily_Wire_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Wire Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Current_ACH_Limit__c</fullName>
        <description>Used in Temporary Limit Change layout.</description>
        <formula>IF(
   OR(
       CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name = &apos;ACH Credit Origination&apos;,
       CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name = &apos;ACH Debit Origination&apos;,
       CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name = &apos;Third Party Sender&apos;
     ),
       CF_Treasury_Service_Name__r.CF_Corporate_ACH_Origination_Limit__c ,
  IF(
      OR(
       CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name = &apos;U-Pay Portal&apos;,
       CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name = &apos;I-Collect Portal&apos;
     ),
       CF_Treasury_Service_Name__r.CF_Requested_ACH_Limit__c,
    0
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ACH Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Request__c</fullName>
        <description>This is used to store Date of request information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field gets populated from the approval process with the user who submitted TLC for approval.</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Temporary_Limit_Changes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Last_Treasury_Review_Date__c</fullName>
        <description>This field is used to capture Last Treasury Review Date from associated relationship &amp; is used as one of the condition in Approval Process.</description>
        <formula>CF_Relationship_Name__r.CF_Last_Treasury_Review_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Limit_Change_Expiration__c</fullName>
        <description>This field is used to store Limit Change Expiration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Limit Change Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Next_Treasury_Review_Date__c</fullName>
        <description>Used on Temporary Limit Changes Layout.</description>
        <formula>CF_Treasury_Service_Name__r.CF_Next_Treasury_Review_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Treasury Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Product__c</fullName>
        <description>Used on Temporary Limit Changes layout.</description>
        <formula>CF_Treasury_Service_Name__r.LLC_BI__Product_Reference__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Reason_for_Request__c</fullName>
        <description>This field is used to track reason for request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Request</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Temporary_Limit_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the account information.</description>
        <label>Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Temporary_Limit_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Requested_Daily_Limit__c</fullName>
        <description>This is used to store Requested Daily Limit.</description>
        <label>Requested Daily Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Requested_Monthly_Limit__c</fullName>
        <description>This is used to store Requested Monthly Limit.</description>
        <label>Requested Monthly Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Requested_Temporary_Limit__c</fullName>
        <description>This is used to track requested temporary limit.</description>
        <label>Requested Temporary Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Requires_Full_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Temporary Limit Changes layout.</description>
        <label>Requires Full Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Revert__c</fullName>
        <description>This field is used to track if Limit Change is reverted or not.</description>
        <label>Revert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Status__c</fullName>
        <description>This field is used to track the status of Temporary Limit Change request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved Ready for Setup</fullName>
                    <label>Approved, Ready for Setup</label>
                </value>
                <value>
                    <fullName>Setup Complete Change Active</fullName>
                    <label>Setup Complete, Change Active</label>
                </value>
                <value>
                    <fullName>Change Expired</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_TM_Deposit_Only__c</fullName>
        <description>Used on Temporary Limit Changes Layout.</description>
        <formula>CF_Relationship_Name__r.CF_TM_Deposit_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM Deposit Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Temporary_Permanent__c</fullName>
        <description>This field has used in Temporary Limit Changes record.</description>
        <label>Temporary/Permanent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Risk_Rating__c</fullName>
        <description>Used on Temporary Limit changes layout.</description>
        <formula>CF_Treasury_Service_Name__r.CF_Treasury_Risk_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasury Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Treasury Service info.</description>
        <label>Treasury Service Name</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Temporary_Limit_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Wire_Client_Authorization_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used on Temporary Limit Changes layout.</description>
        <label>Wire Client Authorization Received</label>
        <type>Checkbox</type>
    </fields>
    <label>Limit Changes</label>
    <listViews>
        <fullName>QU_LVL2_Medium_Risk_Queue_CO_Temporary_Limit_Changes</fullName>
        <filterScope>Queue</filterScope>
        <label>LVL2 / Medium Risk Queue</label>
        <queue>QU_LVL2_Medium_Risk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QU_LVL3_Medium_High_Risk_Queue_CO_Temporary_Limit_Changes</fullName>
        <filterScope>Queue</filterScope>
        <label>LVL3  / Medium-High Risk Queue</label>
        <queue>QU_LVL3_Medium_High_Risk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QU_Limit_Change_Level_1_Low_Risk_Queue_CO_Temporary_Limit_Changes</fullName>
        <filterScope>Queue</filterScope>
        <label>Limit Change - Level 1 / Low Risk Queue</label>
        <queue>QU_Limit_Change_Level_1_Low_Risk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QU_Limit_Change_Level_4_High_Risk_Queue_CO_Temporary_Limit_Changes</fullName>
        <filterScope>Queue</filterScope>
        <label>Limit Change - Level 4 / High Risk Queue</label>
        <queue>QU_Limit_Change_Level_4_High_Risk_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LCN-{0000000}</displayFormat>
        <label>Limit Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limit Changes</pluralLabel>
    <recordTypes>
        <fullName>TLC_nCino_Read_Only_Temporary_Limit_Change</fullName>
        <active>true</active>
        <label>TLC nCino Read Only Temporary Limit Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>TLC_nCino_Temporary_Limit_Change</fullName>
        <active>true</active>
        <label>TLC nCino Temporary Limit Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>